Mise à jour du fichier docker-compose.yml pour ajouter des variables d'environnement et redémarrage automatique des services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: '3.8'
 
 networks:
@@ -17,6 +16,10 @@ services:
       - backend
     networks:
       - app-network
+    restart: always
+    environment:
+      # Si tu as besoin d'ajouter des variables d'environnement pour le frontend, fais-le ici
+      # EX: API_URL: "http://backend-service:3000"
 
   backend:
     build:
@@ -27,4 +30,8 @@ services:
       - "3000:3000"
     networks:
       - app-network
+    restart: always
+    environment:
+      # Si tu as besoin d'ajouter des variables d'environnement pour le backend, fais-le ici
+      # EX: DB_HOST: "mongodb://db-service:27017"
 
